unpackaged/main/default/objects/BMG__c/BMG__c.object-meta.xml
<CustomObject>
    <label>BMG</label>
    <nameField>
        <label>BMG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BMGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>