unpackaged/main/default/objects/BMG__c/fields/Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Enrollments__c</fullName>
    <label>Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>