unpackaged/main/default/objects/BMG__c/fields/IPED__c.field-meta.xml
<CustomField>
    <fullName>IPED__c</fullName>
    <label>IPED</label>
    <length>20</length>
    <type>Text</type>
</CustomField>