unpackaged/main/default/objects/BMG__c/fields/Needs_Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Needs_Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Manual Entry</label>
    <type>Checkbox</type>
</CustomField>