unpackaged/main/default/objects/BMG__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>VALUE(RIGHT( Period__c , 4)) -IF( LEFT( Period__c , 4) = "Spri",1,0)+
IF( LEFT( Period__c , 4) = "Spri",0.2,0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>