unpackaged/main/default/objects/BMG__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_Name__c</columns>
    <columns>Email__c</columns>
    <columns>IPED__c</columns>
    <columns>Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>